----------------------
* On a new project (no serialized project found) force a build. This is to aid setting up CruiseControl as you will not need to wait for a modification.

distributables.xsl
----------------------
* Added info for the ejbjar and ear tasks. Patch by Joris Kuipers

HTMLEmailBuilder
----------------------
* Delete temp files after they've been used. Patch by Joris Kuipers

index.jsp
----------------------
* Sort projects. Patch by Brad Clarke

jmx
----------------------
* Now using MX4J instead of Sun's reference implementation. Patch by Michael Kloss
* Added RMI adapter. Patch by Michael Beauregard

Main
----------------------
* Display command-line options if "-?" is passed as an argument.

ModificationSet
----------------------
* Fixed bogus "A modification was detected in the future" message
* Now properly checks time of modficiations that are added as elements

PluginXMLHelper
----------------------
* add support for nested elements via add(<Type>)

Project
----------------------
* Now fires BuildProgressEvents and BuildResultEvents. Patch by Michael Beauregard

PVCS
----------------------
* Added loginId attribute. Patch by David Cole
* Added back up date format to try in case output date includes seconds. Patch by David Cole
* Added additional parsing when project files includes project path. Patch by David Cole

testdetails.xsl
----------------------
* Support testsuite elements that have been nested, such as in the output from junitreport. Patch by Joris Kuipers

VssBootstrapper
----------------------
* Fixed a bug where bootstrapper would hang if SS.exe put up a prompt.

CruiseControl Release Notes - 2.1.5

ArtifactsPublisher
----------------------
* Add attribute 'subdirectory'. Patch by Garrick Olson
* Change copying of individual files to no longer use the path to the file before copying as part of the path after copying. Patch by Garrick Olson

BuildLogger
----------------------